Basic user auth, needs worth tbh.

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -26,16 +26,19 @@
         <div class="navbar-collapse collapse" id="bs-navbar">
           <ul class="nav navbar-nav">
             <li>
-              <a class="page-scroll" href="#one">Home</a>
+              <a class="page-scroll" href="/">Home</a>
             </li>
             <li>
-              <a class="page-scroll" href="#two">Recipes</a>
+              <a class="page-scroll" href="/recipes">Recipes</a>
             </li>
             <li>
-              <a class="page-scroll" href="#three">Sign up</a>
+              <a class="page-scroll" href="/new/user">Sign up</a>
             </li>
             <li>
-              <a class="page-scroll" href="#last">Contact</a>
+              <a class="page-scroll" href="/dash">Dashboard</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="/dash">Login</a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
