--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -9,9 +9,8 @@
         <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Do this</a> &nbsp; <a href="#one" class="btn btn-primary btn-xl page-scroll">Get Started</a>
       </div>
     </div>
-    <video autoplay="" loop="" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://s3-us-west-2.amazonaws.com/coverr/poster/Traffic-blurred2.jpg" id="video-background">
-      <source src="https://s3-us-west-2.amazonaws.com/coverr/mp4/Traffic-blurred2.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
-    </video>
+    <img autoplay="" loop="" class="fillWidth fadeIn wow collapse in hero-gif" data-wow-delay="0.5s" src="{{ url_for('static', filename='img/hero2.gif') }}" id="video-background" style="filter: blur(5px);width:100vw;"/>
+    <img autoplay="" loop="" class="fillWidth fadeIn wow collapse in hero-gif" data-wow-delay="0.5s" src="{{ url_for('static', filename='img/hero2.gif') }}" id="video-background" style="width:100vw;z-index:0;"/>
   </header>
   <section class="bg-primary" id="one">
     <div class="container">
