Refining login and added empty dash page.

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -58,15 +58,15 @@
         <div class="col-lg-4 col-md-4 text-center">
           <div class="feature">
             <i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
-            <h3>Customizable</h3>
-            <p class="text-muted">Easy to theme and customize with SASS</p>
+            <h3>Healthy</h3>
+            <p class="text-muted">Get the most of your meal plans</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 text-center">
           <div class="feature">
             <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
-            <h3>Consistent</h3>
-            <p class="text-muted">A mature, well-tested, stable codebase</p>
+            <h3>Free</h3>
+            <p class="text-muted">All for the low price of nothing.</p>
           </div>
         </div>
       </div>
