--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -40,6 +40,9 @@
             <li>
               <a class="page-scroll" href="/dash">Login</a>
             </li>
+            <li>
+              <a class="page-scroll" href="/logout">Logout</a>
+            </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
