Logout option, more locked down user base views, create a new recipe (needs UX work), rating HTML

--- a/backend/static/css/styles.css
+++ b/backend/static/css/styles.css
@@ -21,6 +21,11 @@ body {
     webkit-tap-highlight-color: #222;
 }
 
+/*.generic-table {
+    background-color: #fff;
+    color: #000;
+}*/
+
 hr {
     max-width: 80px;
     border-width: 3px;
