--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -10,6 +10,8 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/table.css') }}" />
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   </head>
   <body>
     <nav id="topNav" class="navbar navbar-default navbar-fixed-top">
@@ -28,21 +30,27 @@
             <li>
               <a class="page-scroll" href="/">Home</a>
             </li>
-            <li>
-              <a class="page-scroll" href="/recipes">Recipes</a>
-            </li>
-            <li>
-              <a class="page-scroll" href="/new/user">Sign up</a>
-            </li>
-            <li>
-              <a class="page-scroll" href="/dash">Dashboard</a>
-            </li>
-            <li>
-              <a class="page-scroll" href="/dash">Login</a>
-            </li>
-            <li>
-              <a class="page-scroll" href="/logout">Logout</a>
-            </li>
+            {% if data.logged_in %}
+                <li>
+                  <a class="page-scroll" href="/recipes">Recipes</a>
+                </li>
+                <li>
+                  <a class="page-scroll" href="/new/recipe">New Recipe</a>
+                </li>
+                <li>
+                  <a class="page-scroll" href="/dash">Dashboard</a>
+                </li>
+                <li>
+                  <a class="page-scroll logout-btn" href="#">Logout</a>
+                </li>
+              {% else %}
+                <li>
+                  <a class="page-scroll" href="/dash">Login</a>
+                </li>
+                <li>
+                  <a class="page-scroll" href="/new/user">Sign up</a>
+                </li>
+              {% endif %}
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
@@ -53,12 +61,36 @@
       </div>
     </nav>
     {% block content %}{% endblock %}
-
+    
     <!--scripts loaded here from cdn for performance -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="{{ url_for('static', filename='js/wow.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    
+    <script src="{{ url_for('static', filename='js/table.js') }}"></script>
+    <script>
+      function createCookie(name,value,days) {
+        // http://stackoverflow.com/questions/2144386/javascript-delete-cookie
+        if (days) {
+          var date = new Date();
+          date.setTime(date.getTime()+(days*24*60*60*1000));
+          var expires = "; expires="+date.toGMTString();
+        }
+        else var expires = "";
+        document.cookie = name+"="+value+expires+"; path=/";
+      }
+
+      // Setup logout process.
+      $(".logout-btn").click(function(){
+        createCookie("email", "", -1);
+        createCookie("auth_token", "", -1);
+        window.location.replace("/login")
+      })
+
+      // Init all tables.
+      $(document).ready(function() {
+        $('#example').DataTable();
+      } );
+    </script>
   </body>
 </html>
