--- a/backend/templates/recipes.html
+++ b/backend/templates/recipes.html
@@ -1,10 +1,82 @@
 {% extends "base.html" %}
 {% block content %}
-  <div class="row top-row">
-    <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2" style="text-align:center">
-      {% for recipe in data.recipes %}
-        <a href="/recipe/{{recipe.1}}">{{recipe.0}}</a>
-      {% endfor %}
+  
+  <style>
+    /* https://css-tricks.com/star-ratings/ */
+    .rating-container {
+      unicode-bidi: bidi-override;
+      direction: rtl;
+      text-align: center;
+      cursor: pointer;
+    }
+    .rating-container > span {
+      display: inline-block;
+      position: relative;
+      width: 1.1em;
+    }
+    :not(.clicked).rating-container > span:hover:before,
+    :not(.clicked).rating-container > span:hover ~ span:before {
+       content: "\2605";
+       position: absolute;
+    }
+
+  </style>
+
+  <div class="row top-row generic-table">
+    <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2" style="text-align:center:">
+      <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" style="color: #000;background-color:#fff;">
+        <thead style="background-color: #eee;">
+          <tr>
+            <th>Name</th>
+            <th>Link</th>
+            <th>Rate It!</th>
+          </tr>
+        </thead>
+        <tbody>
+            {% for recipe in data.recipes %}
+            <tr>
+                <td>{{recipe.0}}</td>
+                <td><a href="/recipe/{{recipe.1}}">Link</a></td>
+                <td class="rating-container recipe-{{recipe.1}}">
+                  <span class="star score-5">☆</span>
+                  <span class="star score-4">☆</span>
+                  <span class="star score-3">☆</span>
+                  <span class="star score-2">☆</span>
+                  <span class="star score-1">☆</span>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+      </table>
     </div>
   </div>
+
+  <script>
+    $(".star").click(function(){
+      var parent = $($(this).parent());
+      var recipeId = parent[0].className.replace("rating-container recipe-", "")
+      for (var i = 1; i <= 5; i++) {
+        $(".score-" + i, parent)[0].innerHTML = "\u2606";
+      }
+      
+      parent.addClass("clicked")
+      var score = $(this)[0].className.replace("star score-", "");
+
+      $.ajax({
+        type: "POST",
+        url: "/add/rating",
+        data: {
+          "score": score,
+          "recipe": recipeId
+        },
+        success: function(){alert("rating lodged!")}
+      });
+      
+      for (var i = 1; i <= score; i++) {
+        $(".score-" + i, parent)[0].innerHTML = "\u2605";
+      }
+      
+    })
+  </script>
+
 {% endblock content %}
