--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -7,6 +7,11 @@
       <dl>
         {{ render_field(data.form.username) }}
         {{ render_field(data.form.email) }}
+        {{ render_field(data.form.sex) }}
+        {{ render_field(data.form.exercise) }}
+        {{ render_field(data.form.weight) }}
+        {{ render_field(data.form.height) }}
+        {{ render_field(data.form.age) }}
         {{ render_field(data.form.password) }}
         {{ render_field(data.form.confirm) }}
         {{ render_field(data.form.accept_tos) }}
