--- a/backend/static/css/styles.css
+++ b/backend/static/css/styles.css
@@ -175,7 +175,7 @@ footer {
 @media(min-width:768px) {
     .navbar-default {
         border-color: transparent;
-        background-color: transparent;
+        /*background-color: transparent;*/
         min-height: 60px;
     }
 
