--- a/backend/templates/field_helper.html
+++ b/backend/templates/field_helper.html
@@ -1,12 +1,12 @@
 {% macro render_field(field) %}
   <dt>{{ field.label }}
-  <dd>{{ field(**kwargs)|safe }}
+  <dd style="color:#000;">{{ field(**kwargs)|safe }}
   {% if field.errors %}
-    <ul class=errors>
+    <div class=errors style="margin:10px">
     {% for error in field.errors %}
-      <li>{{ error }}</li>
+      <span style="color:red">{{ error }}</span>
     {% endfor %}
-    </ul>
+    </div>
   {% endif %}
   </dd>
 {% endmacro %}
