--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -5,7 +5,7 @@
     <title>MacroTrack: Eat Healthy!</title>
     <meta name="description" content="This is a free Bootstrap landing page theme created for BootstrapZero. Feature video background and one page design." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="generator" content="Codeply">
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.png') }}" sizes="64x64" type="image/png">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
@@ -52,11 +52,6 @@
                   <a class="page-scroll" href="/new/user">Sign up</a>
                 </li>
               {% endif %}
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a class="page-scroll" data-toggle="modal" title="A free Bootstrap video landing theme" href="#aboutModal">About</a>
-            </li>
           </ul>
         </div>
       </div>
